tests/compile-fail/compile_fail__type_error__stackless__times_count.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: type error
   ┌─ <input>:27:13
   │
27 │       times(F0) {}  
   │             ^^ a float
   │
   = an integer is required


